--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.16.1",
     "fitty": "^2.3.3",
     "http-errors": "~1.6.3",
+    "mongoose": "^4.13.21",
     "mongoose-auto-increment": "^5.0.1",
     "morgan": "~1.9.1",
     "node-sass-middleware": "0.11.0"
